kubernetes-manifests/AKS-Deploy-Manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-backend-deployment
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-app
      tier: backend
  template:
    metadata:
      labels:
        app: chat-app
        tier: backend
    spec:
      containers:
      - name: chat-app-backend
        image: noscopev6/chatapp-b:latest
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: chat-app-backend-service
  namespace: production
  labels:
    app: chat-app
spec:
  selector:
    app: chat-app
    tier: backend
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort

## for stating enviroment deployments 


# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: chat-app-backend-deployment
#   namespace: staging
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: chat-app
#       tier: backend
#   template:
#     metadata:
#       labels:
#         app: chat-app
#         tier: backend
#     spec:
#       containers:
#       - name: chat-app-backend
#         image: noscopev6/chatapp-b:9157a30548bc4852ecabcd4a97259628d6a6af69
#         ports:
#         - containerPort: 8080
#         envFrom:
#           - configMapRef:
#               name: chat-app-config-staging
#           - secretRef:
#               name: chat-app-secret-staging


# ---

# apiVersion: v1
# kind: Service
# metadata:
#   name: chat-app-backend-svc
# spec:
#   type: NodePort
#   selector:
#     app: chat-app
#     tier: backend
#   ports:
#     - port: 8080
#       targetPort: 8080
