kubernetes-manifests/AKS-Deploy-Manifests/azure-ag-ingress.yaml
# deploy ingress service 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: production
  name: chatapp-ingress
  annotations:
    kubernetes.io/ingress.class: azure-application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"  # Enforce HTTPS for external access
spec:
  ingressClassName: azure-application-gateway
  rules:
    - host: chat.ahmadraza.in  # Host for frontend application (HTTPS for public access)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-app-frontend-service  # Replace with your frontend service name
                port:
                  number: 80  # Internal communication over HTTP

    - host: chatapi.ahmadraza.in  # Host for backend service (HTTPS for public access)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-app-backend-service  # Replace with your backend service name
                port:
                  number: 80  # Internal communication over HTTP
    # - host: nginx.ahmadraza.in 
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: nginx-service 
    #             port:
    #               number: 80  


## create and store the ssl certificate in secrets 
# kubectl create secret tls chatapp-secret-tls --cert=tls.crt --key=tls.key -n azure-ingress  # Ensure this matches your namespace
# kubectl describe secret chatapp-secret-tls -n azure-ingress
# kubectl get secret chatapp-secret-tls -n azure-ingress -o yaml
# echo "<base64_encoded_certificate>" | base64 --decode
